     now it's used as a Tag with a key "Name". (LIBCLOUD-480, GITHUB-214)
     [Chris DeRamus]

   - Store additional attributes (iops, tags, block_device_mapping) in the
     "extra" dictionary of the NodeImage object in the EC2 driver.

     Also fix ex_image_ids filtering in the list_images method.
     (LIBCLOUD-481, GITHUB-215)
     [Chris DeRamus]

  *) Storage

    - Allow user to specify 'Content-Disposition' header in the CloudFiles
      driver by passing 'content_disposition' key in the extra dictionary of
      the upload object methods. (LIBCLOUD-430)
      [Michael Farrell]

    - Fix CloudFiles driver so it references a correct service catalog entry for
      the CDN endpoint.

      This was broken in the 0.14.0-beta3 release when we migrated all the
      Rackspace drivers to use auth 2.0 by default. (GITHUB-186)
      [John Obelenus]

    - Update storage drivers to default to "application/octet-stream"
      Content-Type if none is provided and none can be guessed.
      (LIBCLOUD-433)
      [Michael Farrell]

  *) DNS

    - Implement iterate_* methods in the Route53 driver and makes it work
      correctly if there are more results which can fit on a single page.
      Previously, only first 100 results were returned. (LIBCLOUD-434)
      [Chris Clarke]

    - Update HostVirtual driver constructor to only take "key" and other valid
      arguments. Previously it also took "secret" argument which it silently
      ignored. (LIBCLOUD-483)

      Reported by  Andrew Udvare.
      [Tomaz Muraus]

Changes with Apache Libcloud 0.14.0-beta3

  *) General

    - If the file exists, read pricing data from ~/.libcloud/pricing.json
      by default. If the file doesn't exist, fall back to the old behavior
      and use pricing data which is bundled with the release.
      [Tomaz Muraus]

    - Add libcloud.pricing.download_pricing_file function for downloading and
      updating the pricing file.
      [Tomaz Muraus]
